// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Tag: Col sm="8" in 600 => 8 1`] = `
<DocumentFragment>
  .c1 {
  padding: 10px;
}

.c0 {
  text-align: left;
  width: 100%;
}

.c0 pre {
  margin: 0;
}

.c0 code {
  padding: 0.2em 0.4em;
  margin: 0;
  font-size: 85%;
  background-color: rgba(27,31,35,0.05);
  border-radius: 3px;
}

<div
    class="c0"
    style="position: relative;"
  >
    <iframe
      style="background: transparent; height: 100%; left: 0px; position: absolute; top: 0px; width: 100%; z-index: -1;"
    />
    <div
      class="c1"
    />
  </div>
</DocumentFragment>
`;

exports[`Tag: Col sm="8" in 600 => 8 2`] = `
<DocumentFragment>
  .c1 {
  padding: 10px;
}

.c0 {
  text-align: left;
  width: 100%;
}

.c0 pre {
  margin: 0;
}

.c0 code {
  padding: 0.2em 0.4em;
  margin: 0;
  font-size: 85%;
  background-color: rgba(27,31,35,0.05);
  border-radius: 3px;
}

<div
    class="c0"
    style="position: relative;"
  >
    <iframe
      style="background: transparent; height: 100%; left: 0px; position: absolute; top: 0px; width: 100%; z-index: -1;"
    />
    <div
      class="c1"
    >
      Test Content
    </div>
  </div>
</DocumentFragment>
`;
